Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79846

Custom QtQuick with hover events breaks an splitview

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.1, 5.15.0 Alpha
    • 5.13.0
    • Quick: Controls 2
    • None
    • Kubuntu 19.10
    • Linux/X11
    • 75b6ef710cddbf9395df35650438f0feb57ec076 (qt/qtquickcontrols2/5.14)

      If you put custom quickItem in the splitview and pass the setAcceptHoverEvents(true) property to it, then after the first attempt to change the size of the elements using the split, the cursor icon state will change and will not return to the previous one.

      Please have a look at the attached project.

        1. Peek 2019-11-07 11-07.gif
          Peek 2019-11-07 11-07.gif
          47 kB
        2. qtbug79846.zip
          3 kB
        3. SplitViewBug.zip
          2 kB
        For Gerrit Dashboard: QTBUG-79846
        # Subject Branch Project Status CR V

            mitch_curtis Mitch Curtis
            artifeks Петр Миронычев
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes