SplitView: fix hoverable child items breaking handle hover state

Detect HoverEnter events by filtering the mouse events of child items,
and respond by clearing any hovered handle.

Change-Id: Ice7e7fe3cc4c9224064c2384cd832e4a7d91c4da
Fixes: QTBUG-79846
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>